preenchendo o template com algumas informações

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Identity by HTML5 UP</title>
+		<title>Denylson Melo</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -23,9 +23,10 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
-							<h1>Jane Doe</h1>
-							<p>Senior Psychonautics Engineer</p>
+							<span class="avatar"><img src="https://secure.gravatar.com/avatar/b52ef36db04dda904a4504ca2ec31b44" alt="Avatar Image" /></span>
+							<h1>Denylson Melo</h1>
+							<p>Professor do Ensino Básico, Técnico e Tecnológico<br/>
+							Instituto Federal do Piauí - Campus Parnaíba</p>
 						</header>
 						<!--
 						<hr />
@@ -66,9 +67,10 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
+								<li><a href="https://github.com/denylsonmelo" class="fa-github">Github</a></li>
 								<li><a href="#" class="fa-instagram">Instagram</a></li>
 								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li><a href="https://denylsonmelo.github.io/aulas/" class="fa-book">Aulas</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -77,6 +79,11 @@
 					<footer id="footer">
 						<ul class="copyright">
 							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+						<ul class="copyright">
+							<li>Background Images from <a href="https://unsplash.com/">Unsplash</a></li>
+						</ul><ul class="copyright">
+							<li>Published with <a href="https://pages.github.com">GitHub Pages</a></li>
 						</ul>
 					</footer>
 
