Colocando link do linkedin e creditos

--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
 						<footer>
 							<ul class="icons">
 								<li><a href="https://github.com/denylsonmelo" class="fa-github">Github</a></li>
+								<li><a href="https://denylsonmelo.github.io/aulas/" class="fa-book">Aulas</a></li>
+								<li><a href="https://www.linkedin.com/in/denylsonmelo/" class="fa-linkedin">Linkedin</a></li>
+								<li><a href="#" class="fa-lastfm">Lattes</a></li>
 								<li><a href="#" class="fa-instagram">Instagram</a></li>
 								<li><a href="#" class="fa-facebook">Facebook</a></li>
-								<li><a href="https://denylsonmelo.github.io/aulas/" class="fa-book">Aulas</a></li>
 							</ul>
 						</footer>
 					</section>
@@ -82,6 +84,7 @@
 						</ul>
 						<ul class="copyright">
 							<li>Background Images from <a href="https://unsplash.com/">Unsplash</a></li>
+							<li><a href="https://unsplash.com/photos/CKqx1oWmjUQ">Linda Xu</a></li>
 						</ul><ul class="copyright">
 							<li>Published with <a href="https://pages.github.com">GitHub Pages</a></li>
 						</ul>
