--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="https://github.com/denylsonmelo" class="fa-github">Github</a></li>
 								<li><a href="https://denylsonmelo.github.io/aulas/" class="fa-book">Aulas</a></li>
+								<li><a href="https://github.com/denylsonmelo" class="fa-github">Github</a></li>
 								<li><a href="https://www.linkedin.com/in/denylsonmelo/" class="fa-linkedin">Linkedin</a></li>
-								<li><a href="#" class="fa-lastfm">Lattes</a></li>
+								<li><a href="http://lattes.cnpq.br/9617060853229413" class="fa-lattes">Lattes</a></li>
 								<li><a href="#" class="fa-instagram">Instagram</a></li>
 								<li><a href="#" class="fa-facebook">Facebook</a></li>
 							</ul>
