mudanca em alguns textos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Denylson Melo</title>
+		<title>Denylson Melo - Professor, Analista, Desenvolvedor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -34,7 +34,7 @@
 				<!-- Main -->
 					<section id="main">
 						<header>
-							<span class="avatar"><img src="https://secure.gravatar.com/avatar/b52ef36db04dda904a4504ca2ec31b44" alt="Avatar Image" /></span>
+							<span class="avatar"><img src="https://secure.gravatar.com/avatar/b52ef36db04dda904a4504ca2ec31b44" alt="Denylson Melo Profile Image" /></span>
 							<h1>Denylson Melo</h1>
 							<p>Professor do Ensino Básico, Técnico e Tecnológico<br/>
 							Instituto Federal do Piauí - Campus Parnaíba</p>
