mudando mensagem no footer

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 						<ul class="copyright">
-							<li>Background Images from <a href="https://unsplash.com/">Unsplash</a></li>
-							<li><a href="https://unsplash.com/photos/CKqx1oWmjUQ">Linda Xu</a></li>
+							<li>Background Photo by <a href="https://unsplash.com/photos/CKqx1oWmjUQ">Linda Xu</a> on <a href="https://unsplash.com/">Unsplash</a></li>
 						</ul><ul class="copyright">
 							<li>Published with <a href="https://pages.github.com">GitHub Pages</a></li>
 						</ul>
