--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<li>&copy; Jane Doe</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 						<ul class="copyright">
-							<li>Background Photo by <a href="https://unsplash.com/photos/CKqx1oWmjUQ">Linda Xu</a> on <a href="https://unsplash.com/">Unsplash</a></li>
+							<li>Background Photo by <a href="https://source.unsplash.com/">Unsplash Source</a></li>
 						</ul><ul class="copyright">
 							<li>Published with <a href="https://pages.github.com">GitHub Pages</a></li>
 						</ul>
